@@ -1,5 +1,11 @@
 2004-11-19  Jani Monoses <jani@iv.ro>
 
+	* cdl/hal_arm_lpc2xxx_mcb2100.cdl: 
+	* include/hal_platform_setup.h: 
+	Make PLL multiplier value configurable.
+	
+2004-11-19  Jani Monoses <jani@iv.ro>
+
 	* include/hal_platform_setup.h: 
 	Fix previous fix. LDR needs its operand prefixed with = not #.
 	
